Tried fix body horizontal scroll bug

--- a/styles.css
+++ b/styles.css
@@ -359,36 +359,54 @@ body{
 }
 @media (max-width:320px)  { 
     /* smartphones, iPhone, portrait 480x320 phones */ 
+    body{
+        width: fit-content;
+    }
     #AboutMe{
         display: inline-block;
     }
 }
 @media (max-width:481px)  {
      /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ 
+     body{
+        width: fit-content;
+    }
      #AboutMe{
         display: inline-block;
     }    
 }
 @media (max-width:641px)  { 
     /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ 
+    body{
+        width: auto;
+    }
     #AboutMe{
         display: inline-block;
     }
 }
 @media (max-width:961px)  { 
     /* tablet, landscape iPad, lo-res laptops ands desktops */ 
+    body{
+        width: auto;
+    }
     #AboutMe{
         display: inline-block;
     }
 }
 @media (max-width:1025px) {
      /* big landscape tablets, laptops, and desktops */ 
+     body{
+        width: auto;
+    }
      #AboutMe{
         display: inline-block;
     }    
 }
 @media (max-width:1281px) { 
     /* hi-res laptops and desktops */ 
+    body{
+        width: auto;
+    }
     #AboutMe{
         display: inline-block;
     }
